--- a/src/app/modules/approval-portal/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/approval-portal/pages/dashboard/dashboard.component.html
@@ -1,1 +1,21 @@
-<p>dashboard works!</p>
+<div class="subheader">
+    <div class="subheader-left">
+
+      <div class="subheader-title">
+        <h2>Dashboard</h2>
+      </div>
+    </div>
+  
+    
+  
+    <div class="subheader-image">
+      <img src="assets/images/sub-head.svg" alt="Subhead">
+  
+    </div>
+  </div>
+
+  <div class="content-center">
+    <img src="assets/images/search_image.png" alt="Subhead" class="center-image">
+    <p>No request yet</p>
+    <button mat-raised-button color="primary" routerLink="add-new-request">Add New Request</button>
+</div>
