--- a/src/app/shared/lib/dashboard-header/dashboard-header.component.html
+++ b/src/app/shared/lib/dashboard-header/dashboard-header.component.html
@@ -1,10 +1,24 @@
-<div class="top-header"></div>
-<div class="top-content">
-  <div class="main-header">
-    <a routerLink="/" href="/" class="branding">
-      <img class="logo" [src]="assetUrl + '/assets/svgs/logo_blue.svg'" alt="" />
-      <span class="logo-text">Stanbic Bank</span>
-    </a>
-   
-  </div>
-</div>
+
+<section class="header-navigation">
+
+  <div class="top-content">
+
+      <section class="logo">
+        <img class="logo-image" [src]="assetUrl + '/assets/images/Standard Bank_Progress Logo_Stacked_RGB-01 7.svg'" alt="" />
+        <img class="logo-text" [src]="assetUrl + '/assets/images/Stanbic Bank logotext.svg'" alt="" />
+      </section>
+  
+  <section class="actions">
+  <img class="bell-icon" [src]="assetUrl + '/assets/icons/refresh.svg'" alt="" />
+  <img class="bell-icon" [src]="assetUrl + '/assets/icons/bell_icon.svg'" alt="" />
+  <section class="staff-data">
+  <span class = "staff-display"> GS </span>
+  <p class = "staff-name"   style=" margin-left: 10px;" >Gideon Salami</p>
+  </section>
+
+ </section>
+  <!-- <span class="logo-text">Cash Build</span> -->
+    </div>
+
+
+</section>
