--- a/src/app/shared/lib/side-nav-container/side-nav-container.component.html
+++ b/src/app/shared/lib/side-nav-container/side-nav-container.component.html
@@ -1,8 +1,6 @@
-
-<section [ngClass]="{'mobile-screen':  isMobile }"  class="dashboard-drawer" mode="over" [style.display]="opened ? 'block' : 'none'" >
+<section class="dashboard-drawer" mode="over" [style.display]="opened ? 'block' : 'none'">
   <ng-content>
 
   </ng-content>
 
 </section>
-
