--- a/src/app/modules/approval-portal/approval-portal.component.html
+++ b/src/app/modules/approval-portal/approval-portal.component.html
@@ -1,42 +1,60 @@
-<app-dashboard-header></app-dashboard-header>
-<app-dashboard-content-container style="width: 100%;">
-<app-side-nav-container><nav class="sidelinks-wrapper">
+<app-dashboard-container>
 
-    <div class="upper-nav">
-        <div routerLinkActive='sidelinkActive' matRipple class="sidelink-div" routerLink="dashboard">
-            <img [src]="assetUrl+'/assets/svgs/icn_dashboard.svg'" alt="">
-            <a routerLinkActive='sidelinkActive'>Dashboard</a>
+    <app-dashboard-header></app-dashboard-header>
+  
+    <app-dashboard-content-container style="flex: 1 1 auto; height: calc(100vh - var(--dashboard-header-height));">
+      
+      <app-side-nav-container>
+        <div class="sidelinks-wrapper">
+
+            <div class="charge-request">
+                <h2>CHARGE REQUEST</h2>
+            </div>
+
+            <div class="sidelink-div" routerLink="dashboard">
+                <mat-icon>dashboard</mat-icon>
+                <a routerLinkActive='sidelinkActive'>Dashboard</a>
+            </div>
+            <mat-divider></mat-divider>
+
+            <div class="sidelink-div" routerLink="pending-request">
+                <mat-icon>groups</mat-icon>
+                <a routerLinkActive='sidelinkActive'>Pending Requests</a>
+            </div>
+            <mat-divider></mat-divider>
+
+            <div class="sidelink-div" routerLink="approved-request">
+                <mat-icon>check_circle_outline</mat-icon>
+                <a routerLinkActive='sidelinkActive'>Approved Requests</a>
+            </div>
+            <mat-divider></mat-divider>
+
+            <div class="sidelink-div" routerLink="rejected-request">
+                <mat-icon>cancel</mat-icon>
+                <a routerLinkActive='sidelinkActive'>Rejected Requests</a>
+            </div>
+            <mat-divider></mat-divider>
+
+            <div class="sidelink-div" routerLink="history">
+                <mat-icon>history</mat-icon>
+                <a routerLinkActive='sidelinkActive'>History</a>
+            </div>
+            <mat-divider></mat-divider>
+
+            <div class="sidelink-div" routerLink="user-management">
+                <mat-icon>people</mat-icon>
+                <a routerLinkActive='sidelinkActive'>User Management</a>
+            </div>
+            <mat-divider></mat-divider>
+
         </div>
-
-    </div>
-
-    <div class="lower-nav">
-
-        <div routerLinkActive='sidelinkActive' class="sidelink-div" routerLink="doc-type">
-            <a routerLinkActive='sidelinkActive'>Document Type</a>
-        </div>
-
-        <div routerLinkActive='sidelinkActive' class="sidelink-div" routerLink="pending">
-            <a routerLinkActive='sidelinkActive'>Pending</a>
-        </div>
-
-        <div routerLinkActive='sidelinkActive' class="sidelink-div" routerLink="completed">
-            <a routerLinkActive='sidelinkActive'>Completed</a>
-        </div>
-
-        <div routerLinkActive='sidelinkActive' class="sidelink-div" routerLink="drafts">
-            <a routerLinkActive='sidelinkActive'>Drafts</a>
-        </div>
-
-        <div routerLinkActive='sidelinkActive' class="sidelink-div" routerLink="history">
-            <a routerLinkActive='sidelinkActive'>History</a>
-        </div>
-
-    </div>
-
-
-
-
-</nav></app-side-nav-container>
-<router-outlet></router-outlet>
-</app-dashboard-content-container>
+        
+      </app-side-nav-container>
+  
+      <app-main-content-container style="flex: 1 1 auto; height: calc(100vh - var(--dashboard-header-height))">
+        <router-outlet></router-outlet>
+      </app-main-content-container>
+  
+    </app-dashboard-content-container>
+  
+</app-dashboard-container>
