dashboard and new request page

--- a/src/app/modules/approval-portal/approval-portal.component.html
+++ b/src/app/modules/approval-portal/approval-portal.component.html
@@ -11,8 +11,10 @@
                 <h2>CHARGE REQUEST</h2>
             </div>
 
+            <mat-divider></mat-divider>
+
             <div class="sidelink-div" routerLink="dashboard">
-                <mat-icon>dashboard</mat-icon>
+                <mat-icon>dashboard_outlined</mat-icon>
                 <a routerLinkActive='sidelinkActive'>Dashboard</a>
             </div>
             <mat-divider></mat-divider>
