--- a/src/app/shared/lib/dashboard-header/dashboard-header.component.html
+++ b/src/app/shared/lib/dashboard-header/dashboard-header.component.html
@@ -4,13 +4,12 @@
   <div class="top-content">
 
       <section class="logo">
-        <img class="logo-image" [src]="assetUrl + '/assets/images/Standard Bank_Progress Logo_Stacked_RGB-01 7.svg'" alt="" />
-        <img class="logo-text" [src]="assetUrl + '/assets/images/Stanbic Bank logotext.svg'" alt="" />
+        <img class="logo-image" src="assets/images/Standard Bank_Progress Logo_Stacked_RGB-01 7.svg" alt="" />
+        <img class="logo-text" src="assets/images/Stanbic Bank logotext.svg" alt="" />
       </section>
   
   <section class="actions">
-  <img class="bell-icon" [src]="assetUrl + '/assets/icons/refresh.svg'" alt="" />
-  <img class="bell-icon" [src]="assetUrl + '/assets/icons/bell_icon.svg'" alt="" />
+  <img class="bell-icon" src="assets/icons/refresh.svg" alt="" />
   <section class="staff-data">
   <span class = "staff-display"> GS </span>
   <p class = "staff-name"   style=" margin-left: 10px;" >Gideon Salami</p>
