--- a/src/app/shared/lib/side-nav-container/side-nav-container.component.scss
+++ b/src/app/shared/lib/side-nav-container/side-nav-container.component.scss
@@ -2,11 +2,7 @@
 .dashboard-drawer{
   width: 220px;
   height: calc(100vh - 100px);
-
-  
-  // border-right: 1px solid black;
-
-  // border-right: 0.5px solid rgba(26, 49, 77, 0.11);
+  border-right: 0.5px solid rgba(26, 49, 77, 0.11);
   background-color: white;
 }
 
