--- a/src/app/modules/approval-portal/approval-portal.component.html
+++ b/src/app/modules/approval-portal/approval-portal.component.html
@@ -13,41 +13,36 @@
 
             <mat-divider></mat-divider>
 
-            <div class="sidelink-div" routerLink="dashboard">
-                <mat-icon>dashboard_outlined</mat-icon>
+            <div class="sidelink-div" routerLink="dashboard" routerLinkActive="sidelink-div-active">
+                <mat-icon>dashboard</mat-icon>
                 <a routerLinkActive='sidelinkActive'>Dashboard</a>
             </div>
-            <mat-divider></mat-divider>
+            <mat-divider [ngClass]="{'mat-divider-active': isRouteActive('dashboard')}"></mat-divider>
 
-            <div class="sidelink-div" routerLink="pending-request">
-                <mat-icon>groups</mat-icon>
+            <div class="sidelink-div" routerLink="pending-request" routerLinkActive="sidelink-div-active">
+                <mat-icon>hourglass_empty</mat-icon>
                 <a routerLinkActive='sidelinkActive'>Pending Requests</a>
             </div>
-            <mat-divider></mat-divider>
+            <mat-divider [ngClass]="{'mat-divider-active': isRouteActive('pending-request')}"></mat-divider>
 
-            <div class="sidelink-div" routerLink="approved-request">
+            <div class="sidelink-div" routerLink="approved-request" routerLinkActive="sidelink-div-active">
                 <mat-icon>check_circle_outline</mat-icon>
                 <a routerLinkActive='sidelinkActive'>Approved Requests</a>
             </div>
-            <mat-divider></mat-divider>
+            <mat-divider [ngClass]="{'mat-divider-active': isRouteActive('approved-request')}"></mat-divider>
 
-            <div class="sidelink-div" routerLink="rejected-request">
-                <mat-icon>cancel</mat-icon>
+            <div class="sidelink-div" routerLink="rejected-request" routerLinkActive="sidelink-div-active">
+                <mat-icon>block</mat-icon>
                 <a routerLinkActive='sidelinkActive'>Rejected Requests</a>
             </div>
-            <mat-divider></mat-divider>
+            <mat-divider [ngClass]="{'mat-divider-active': isRouteActive('rejected-request')}"></mat-divider>
 
-            <div class="sidelink-div" routerLink="history">
+            <div class="sidelink-div" routerLink="history" routerLinkActive="sidelink-div-active">
                 <mat-icon>history</mat-icon>
                 <a routerLinkActive='sidelinkActive'>History</a>
             </div>
-            <mat-divider></mat-divider>
+            <mat-divider [ngClass]="{'mat-divider-active': isRouteActive('history')}"></mat-divider>
 
-            <div class="sidelink-div" routerLink="user-management">
-                <mat-icon>people</mat-icon>
-                <a routerLinkActive='sidelinkActive'>User Management</a>
-            </div>
-            <mat-divider></mat-divider>
 
         </div>
         
