--- a/src/app/modules/approval-portal/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/approval-portal/pages/dashboard/dashboard.component.html
@@ -128,7 +128,7 @@
             <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef> Status</th>
                 <td mat-cell *matCellDef="let element" class="mat-column-status"> <span class="status-pending"
-                        [ngClass]="{'status-pending': element.status.toLowerCase() === 'pending'}">{{ element.status }}
+                        [ngClass]="{'status-pending': element.status.toLowerCase() === 'pending','status-approved': element.status.toLowerCase() === 'approved','status-reject': element.status.toLowerCase() === 'rejected'}">{{ element.status }}
                     </span>
                 </td>
             </ng-container>
