--- a/src/app/modules/maker-portal/pages/approved-request/approved-request.component.html
+++ b/src/app/modules/maker-portal/pages/approved-request/approved-request.component.html
@@ -1,4 +1,4 @@
-<h3 class="head-text">Pending Request</h3>
+<h3 class="head-text">Approved Request</h3>
 
 
 <div class="features-row">
@@ -106,7 +106,7 @@
             <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef> Status</th>
                 <td mat-cell *matCellDef="let element" class="mat-column-status"> <span class="status-pending"
-                        [ngClass]="{'status-pending': element.status.toLowerCase() === 'pending'}">{{ element.status }}
+                        [ngClass]="{'status-approved': element.status.toLowerCase() === 'approved'}">{{ element.status }}
                     </span>
                 </td>
             </ng-container>
