--- a/src/app/modules/maker-portal/pages/add-new-request/add-new-request.component.html
+++ b/src/app/modules/maker-portal/pages/add-new-request/add-new-request.component.html
@@ -7,8 +7,17 @@
     </mat-card-header>
 
     <mat-card-content class="form-content">
+        <mat-form-field class="acc-name" appearance="outline">
+            <mat-label>Select Account Name</mat-label>
+            <mat-select></mat-select>
+        </mat-form-field>
 
+        <mat-form-field class="acc-input" appearance="outline">
+            <mat-label>Account Number </mat-label>
+            <input matInput type="text" placeholder="Account Number"/>
+        </mat-form-field>
     </mat-card-content>
+
 
     <mat-divider></mat-divider>
 
