--- a/src/app/modules/maker-portal/pages/add-new-request/add-new-request.component.html
+++ b/src/app/modules/maker-portal/pages/add-new-request/add-new-request.component.html
@@ -1,5 +1,15 @@
-<h3 class="head-text">New Request</h3>
+<div class="top-bar">
 
+    <div class="back-btn-wrapper">
+        <div (click)="goBack()" matRipple class="back-btn">
+            <img src="assets/svgs/chevron-right.svg" alt="">
+        </div>
+
+        <span>New Request</span>
+
+    </div>
+
+</div>
 
 <mat-card class="custom-card">
     <mat-card-header>
@@ -9,14 +19,51 @@
     <mat-card-content class="form-content">
         <mat-form-field class="acc-name" appearance="outline">
             <mat-label>Select Account Name</mat-label>
-            <mat-select></mat-select>
+            <mat-select>
+                <mat-option *ngFor="let AccountName of accountname" [value]="AccountName.value">
+                    {{ AccountName.label }}
+                </mat-option>
+            </mat-select>
         </mat-form-field>
 
         <mat-form-field class="acc-input" appearance="outline">
             <mat-label>Account Number </mat-label>
-            <input matInput type="text" placeholder="Account Number"/>
+            <input matInput type="text" placeholder="Account Number" />
+            <mat-hint class="form-hint">This field is auto-populated</mat-hint>
         </mat-form-field>
     </mat-card-content>
+
+    <mat-form-field class="role-of-employee" appearance="outline">
+        <mat-label> Role of Employee </mat-label>
+        <mat-select>
+            <mat-option *ngFor="let RoleOfEmployee of roleofemployee" [value]="RoleOfEmployee.value">
+                {{ RoleOfEmployee.label }}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+
+    <mat-form-field class="type-of-offense" appearance="outline">
+        <mat-label> Type of Offense </mat-label>
+        <mat-select>
+            <mat-option *ngFor="let TypeOfOffense of typeofoffense" [value]="TypeOfOffense.value">
+                {{ TypeOfOffense.label }}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+
+    <mat-form-field class="amount-field" appearance="outline">
+        <mat-label> Amount </mat-label>
+        <input matInput type="text" placeholder="Amount" />
+        <mat-hint class="form-hint">This field is auto-populated</mat-hint>
+    </mat-form-field>
+
+    <mat-form-field class="date-of-offense-field" appearance="outline">
+        <mat-label> Date of Offense</mat-label>
+        <input matInput [matDatepicker]="picker">
+        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+
 
 
     <mat-divider></mat-divider>
@@ -25,10 +72,9 @@
         <button class="form1-button" mat-raised-button color="white" mat-button>
             Cancel
         </button>
-        
-        <button  class="form1-button" mat-raised-button color="primary" mat-button>
+
+        <button class="form1-button" (click)="gotoDashboard()" mat-raised-button color="primary" mat-button>
             Submit
         </button>
     </mat-card-actions>
 </mat-card>
-
