--- a/src/app/modules/maker-portal/pages/add-new-request/add-new-request.component.html
+++ b/src/app/modules/maker-portal/pages/add-new-request/add-new-request.component.html
@@ -1,7 +1,7 @@
 <div class="top-bar">
 
     <div class="back-btn-wrapper">
-        <div (click)="goBack()" matRipple class="back-btn">
+        <!-- <div (click)="goBack()" matRipple class="back-btn"> -->
             <img src="assets/svgs/chevron-right.svg" alt="">
         </div>
 
@@ -9,7 +9,7 @@
 
     </div>
 
-</div>
+<!-- </div> -->
 
 <mat-card class="custom-card">
     <mat-card-header>
@@ -73,8 +73,9 @@
             Cancel
         </button>
 
-        <button class="form1-button" (click)="gotoDashboard()" mat-raised-button color="primary" mat-button>
+        <button class="form1-button" (click)="submitForm()" mat-raised-button color="primary" mat-button>
             Submit
         </button>
+        
     </mat-card-actions>
 </mat-card>
