--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+
+body .cdk-overlay-container .success-snackbar.mat-mdc-snack-bar-container,
+
+body .cdk-overlay-container .success-snackbar.mat-mdc-snack-bar-container * {
+    background-color: green !important;
+    color: white !important;
+}
+
+body .cdk-overlay-container .success-snackbar.mat-mdc-snack-bar-container .mdc-snackbar__action .mat-mdc-button,
+
+body .cdk-overlay-container .success-snackbar.mat-mdc-snack-bar-container .mdc-snackbar__surface {
+    color: white !important;
+}
