--- a/src/app/modules/maker-portal/pages/user-management/user-management.component.html
+++ b/src/app/modules/maker-portal/pages/user-management/user-management.component.html
@@ -1,1 +1,50 @@
-<p>user-management works!</p>
+<div class="top-bar">
+
+    <div class="back-btn-wrapper">
+        <div (click)="goBack()" matRipple class="back-btn">
+            <img src="assets/svgs/chevron-right.svg" alt="">
+        </div>
+
+        <span>New Request</span>
+
+    </div>
+
+</div>
+
+<mat-card class="custom-card">
+    <mat-card-header>
+        <mat-card-title class="mat-card-title">Fill in the details of the new user.</mat-card-title>
+    </mat-card-header>
+
+    <mat-card-content class="form-content">
+        <mat-form-field class="acc-name" appearance="outline">
+            <mat-label>Enter Account Name</mat-label>
+            <input matInput type="text" placeholder="Account Number" />
+            <mat-icon matSuffix>mode_edit</mat-icon>
+        </mat-form-field>
+
+        <mat-form-field class="acc-input" appearance="outline">
+            <mat-label>Account Number </mat-label>
+            <input matInput type="text" placeholder="Account Number" />
+            <mat-icon matSuffix>mode_edit</mat-icon>
+        </mat-form-field>
+    </mat-card-content>
+
+    <mat-form-field class="role-of-employee" appearance="outline">
+        <mat-label> Role of Employee </mat-label>
+        <input matInput type="text" placeholder="Account Number" />
+        <mat-icon matSuffix>mode_edit</mat-icon>
+    </mat-form-field>
+
+    
+    <mat-divider></mat-divider>
+
+    <mat-card-actions class="form1-but">
+    
+
+        <button class="form1-button" (click)="submitForm()" mat-raised-button color="primary" mat-button>
+            Save
+        </button>
+        
+    </mat-card-actions>
+</mat-card>
