--- a/src/app/modules/maker-portal/pages/user-management/user-management.component.html
+++ b/src/app/modules/maker-portal/pages/user-management/user-management.component.html
@@ -5,7 +5,7 @@
             <img src="assets/svgs/chevron-right.svg" alt="">
         </div>
 
-        <span>New Request</span>
+        <span>Manage New User</span>
 
     </div>
 
@@ -13,7 +13,8 @@
 
 <mat-card class="custom-card">
     <mat-card-header>
-        <mat-card-title class="mat-card-title">Fill in the details of the new user.</mat-card-title>
+        <mat-card-title class="mat-card-title">Fill in the details of the new user.
+        </mat-card-title>
     </mat-card-header>
 
     <mat-card-content class="form-content">
