--- a/src/app/modules/maker-portal/pages/pending-request/pending-request.component.html
+++ b/src/app/modules/maker-portal/pages/pending-request/pending-request.component.html
@@ -10,8 +10,8 @@
                 <span>Filter</span>
                 <mat-icon>expand_more</mat-icon>
             </div>
-        </button>        
-        
+        </button>
+
         <mat-menu #filterMenu="matMenu">
             <h3>FILTER OPTIONS</h3>
             <button mat-menu-item>
@@ -126,9 +126,10 @@
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
             <tr mat-row *matRowDef="let row;  odd as isOdd; columns: displayedColumns;" [class.odd-row]="isOdd"
-                (click)="selection.toggle(row)" class="hoverable-row"
+                (click)="navigateToDetails(row)" class="hoverable-row"
                 [ngClass]="{'selected': selection.isSelected(row)}">
             </tr>
+
         </table>
     </div>
 
@@ -136,4 +137,4 @@
         <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of data">
         </mat-paginator>
     </div>
-</div>                  
+</div>
