--- a/src/app/modules/maker-portal/components/view-pending/view-pending.component.scss
+++ b/src/app/modules/maker-portal/components/view-pending/view-pending.component.scss
@@ -31,6 +31,29 @@
     font-size: 1.1rem;
 }
 
+.top-description {
+    width: 590px; 
+    height: 30px;
+    border-radius: 12px;
+    background: #DCE7FF;
+    display: flex;
+    align-items: center; 
+    padding-left: 20px; 
+    margin: 10px auto; 
+    margin-top: 50px;
+    margin-bottom: -80px;
+    padding: 6px;
+    position: relative; 
+    gap: 10px; 
+}
+
+.description-icon {
+    height: 30px;
+    width: auto;
+}
+
+
+
 .custom-card {
     margin: auto;
     margin-top: 100px;
@@ -51,55 +74,23 @@
     padding-bottom: 10px;
 }
 
-.acc-name {
+.acc-name, .acc-input {
     width: 570px;
 }
 
-.acc-input {
-    width: 570px;
+
+.blue-button {
+    background-color: #007BFF !important;
+    color: #ffffff !important;
+    margin-left: 495px;
 }
 
-.form1-but {
-    margin-left: 420px;
-}
-
-.form1-button {
-    padding: 10px;
-    margin-left: 10px;
-    text-align: center;
-}
-
-.form-hint {
-    color: #00AF43;
-}
 
 mat-form-field {
     margin-bottom: 5px;
 }
 
-.role-of-employee {
-    margin-left: 16px;
-    margin-right: 8px;
-    width: 270px;
-}
-
-.type-of-offense {
-    margin-left: 20px;
-    margin-right: 5px;
-    width: 270px;
-}
-
-.amount-field {
-    margin-left: 16px;
-    margin-right: 8px;
-    width: 270px;
-    margin-bottom: 20px;
-}
-
-.date-of-offense-field {
-    margin-left: 20px;
-    margin-right: 10px;
-    margin-bottom: 20px;
+.role-of-employee, .type-of-offense, .amount-field, .date-of-offense-field {
     width: 270px;
 }
 
